[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Silver Fighter.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=2]

[node name="Enemy" type="RigidBody2D"]
rotation = 3.14159
mode = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Fire" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="TargetDir" type="Position2D" parent="."]
rotation = 3.14159

[node name="StateChanger" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BulletPoint" type="Position2D" parent="."]
position = Vector2( 0, -25 )

[connection signal="timeout" from="Fire" to="." method="_on_Fire_timeout"]
[connection signal="timeout" from="StateChanger" to="." method="_on_StateChanger_timeout"]
